--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-    <title>Temperature Convert</title>
+    <title>Temperature Converter</title>
     <style>
         *{
             padding: 0px;
